Mac unplugged update of html

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,30 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+.content-wrapper {
+  outline: 3ps dotted #ff0000;
+}
+
+
+   /* -----------Base Header - Footer Styles -----------*/
+header {
+
+}
+
+header .content-wrapper {
+
+}
+
+header nav ul {
+
+}
+
+
+
+
+
+
+
 
 /* ==========================================================================
    Helper classes
